--- a/style.css
+++ b/style.css
@@ -57,11 +57,19 @@ h2 {
   text-decoration: underline; 
 }
 
+button {
+  margin: 0px; 
+  border: 0px; 
+  display: inline-block; 
+}
+
 .container {
   background-color: white; 
   border: 0px solid; 
   border-radius: 2%; 
   position: center; 
+  display: block; 
+  margin-bottom: 100px; 
   
 
 }
@@ -78,9 +86,7 @@ h2 {
   
 }
 
-footer {
-  background-color: black; 
-}
+
 
 
 
